# STM32_W5500_Ubuntu

./: README.md
STM32_Client/: .cproject  .mxproject  .project  README.md  Socket_Prog Debug.launch  Socket_Prog.ioc
STM32_Client/Core/Inc/: Bms_handler.h  Imu_handler.h  main.h  stm32g4xx_hal_conf.h  tcp_server.h
STM32_Client/Core/Src/: Bms_handler.c  Imu_handler.c  dhcp.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  tcp_server.c
STM32_Client/Debug/: Socket_Prog.elf  Socket_Prog.list  Socket_Prog.map  makefile  objects.list
STM32_Client/Debug/Core/Src/: Bms_handler.cyclo  Bms_handler.d  Bms_handler.su  Imu_handler.cyclo  Imu_handler.d  Imu_handler.su  bms_can.cyclo  bms_can.d  bms_can.su  dhcp.cyclo  dhcp.su  main.cyclo  main.d  main.su  socket.cyclo  socket.su  stm32g4xx_hal_msp.cyclo  stm32g4xx_hal_msp.d  stm32g4xx_hal_msp.su  stm32g4xx_it.d  subdir.mk  system_stm32g4xx.d  tcp_server.cyclo  tcp_server.d  tcp_server.su  wizchip_conf.su
STM32_Server/: CMakeLists.txt  IMU_BMS_Deserialization  makefile
STM32_Server/CSV_Python/: Normal_Plot.py  Plot1.py  Stressed_Plot.py
STM32_Server/Inc/: Bms_handler.h  Extra_Test.py  Imu_handler.h  Input_handler.h  Pdb_handler.h  Stressed_Plot.py  tcp_client.h  tcp_server.h  udp_client.h
STM32_Server/Src/: Bms_handler.c  IMU_BMS_Deserialization  IMU_BMS_Deserialization.c  Imu_handler.c  Input_handler.c  Pdb_handler.c  main.c  tcp_client.c  tcp_server.c  udp_client.c
STM32_Server/inc+src/: IMU+BMS_Deserialiazation  IMU+BMS_Deserialiazation.c  Plot1.py  bms_can-config.h  bms_can.c  bms_can.h
(+19 files in other folders)
